--- a/styles/prosilver/template/event/posting_editor_buttons_custom_tags_before.html
+++ b/styles/prosilver/template/event/posting_editor_buttons_custom_tags_before.html
@@ -1,4 +1,4 @@
-<select name="addbbcode21" onchange="bbfontstyle('[install]' + this.form.addbbcode21.options[this.form.addbbcode21.selectedIndex].value + ' [code]', '[/code][/install]');this.form.addbbcode21.selectedIndex = 0;" title="{L_MODX_CMD}">
+<select name="addbbcode21" onchange="bbfontstyle('[install]' + this.options[this.selectedIndex].value + ' [code]', '[/code][/install]');this.selectedIndex = 0;" title="{L_MODX_CMD}">
 				<option value="0" selected="selected" style="display: none">{L_MODX_CMD}</option>
 				<option value="{L_BBCODE21_FIND}">{L_MODX_FIND}</option>
 				<option value="{L_BBCODE21_AFTER}">{L_MODX_ADD_AFTER}</option>
