--- a/styles/prosilver/template/event/vse_abbc3_posting_editor_buttons_custom_tags_before.html
+++ b/styles/prosilver/template/event/vse_abbc3_posting_editor_buttons_custom_tags_before.html
@@ -1,4 +1,4 @@
-<select name="abbc3_addbbcode21" onchange="bbfontstyle('[install]' + this.options[this.selectedIndex].value + ' [code]', '[/code][/install]');this.selectedIndex = 0;" title="{L_MODX_CMD}">
+<select class="bbcode-modx" name="abbc3_addbbcode21" onchange="bbfontstyle('[install]' + this.options[this.selectedIndex].value + ' [code]', '[/code][/install]');this.selectedIndex = 0;" title="{L_MODX_CMD}">
 	<option value="0" selected="selected" style="display: none">{L_MODX_CMD}</option>
 	<option value="{L_BBCODE21_FIND}">{L_MODX_FIND}</option>
 	<option value="{L_BBCODE21_AFTER}">{L_MODX_ADD_AFTER}</option>
